--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^15.0.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.11.10",
+    "lucide-react": "^0.454.0",
     "next": "14.2.15",
     "prop-types": "^15.8.1",
     "react": "^18",
@@ -19,7 +25,10 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "sharp": "^0.33.5",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "postcss": "^8",
